# delivery_service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_06_19_1424-7f1a28da392d_add_all_models.py  2024_06_20_1341-41dbd2ca08af_update_user_model.py  2024_06_20_1400-c26a6fd9e8b6_update_user_model.py  2024_06_20_1648-acec9144574f_update_type_model.py
app/: di.py
app/api/: __init__.py  exceptions.py  schemas.py
app/api/v1/: __init__.py
app/api/v1/users/: dependencies.py  handlers.py  schemas.py
app/domain/: constants.py
app/domain/entities/: base.py  packages.py  users.py
app/domain/exceptions/: base.py  packages.py  users.py
app/domain/values/: base.py  packages.py  users.py
app/infra/cache/: base.py  redis.py
app/infra/db/: base.py  mongo_client.py  packages.py  session.py  users.py
app/infra/dtos/: base.py  packages.py  users.py
app/infra/exceptions/: http.py  packages.py  users.py
app/infra/models/: packages.py  users.py
app/infra/queues/taskiq/: broker.py  tasks.py
app/infra/repositories/calculation/: base.py  converters.py  mongo.py
app/infra/repositories/users/: alchemy.py  base.py  converters.py  memory.py
app/infra/workers/celery/: celery_tasks.py  main.py
app/logging/: factory.py
app/logic/: utils.py
app/logic/use_cases/: packages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/api/: conftest.py
app/tests/domain/: test_values.py
docker_compose/: app.yaml  mongo-express.yaml  mongo.yaml  storages.yaml  workers.yaml
(+7 files in other folders)
