[tool.poetry]
name = "delivery-service"
version = "0.1.0"
description = ""
authors = ["alex_den <sanyakoenig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.7.4"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
punq = "^0.7.0"
pydantic-settings = "^2.3.3"
aiomysql = "^0.2.0"
alembic = "^1.13.1"
cryptography = "^42.0.8"
bcrypt = "^4.1.3"
motor = "^3.4.0"
taskiq = {extras = ["reload"], version = "^0.11.6"}
taskiq-redis = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
